Module 3/m03a06quadratic-handout/grading/2024-09-19-08-43-51/compile.err
Quadratic.java:17: error: ';' expected
        if (a = 0) {System.out.println("1.0")}
                                             ^
1 error
